fixed alignment in menu

--- a/src/App.css
+++ b/src/App.css
@@ -111,15 +111,14 @@
   font-style: normal !important;
   color: #ede1d1;
   margin: 0;
-  padding: 0.2rem;
+  padding-left: 0.2rem;
   font-size: 2.3rem !important;
   font-weight: 100;
 }
 
 .food-box .h4-precio {
   margin: 0;
-  padding: 0.2rem;
-  padding-left: 1rem;
+  padding-top: 0.3em;
   font-size: 1.7rem;
   font-weight: 200;
 }
