--- a/src/Home.css
+++ b/src/Home.css
@@ -433,7 +433,7 @@ h4 {
 
 #Contacto h3 {
   font-family: Agrandir-WideLight;
-  font-size: 1em;
+  font-size: 1.2em;
 }
 
 .grey {
